# solc

./: .gitmodules  .travis.yml  CMakeLists.txt  Changelog.md  LICENSE.txt  README.md  appveyor.yml
cmake/: CMakeParseArguments.cmake  EthBuildInfo.cmake  EthCompilerSettings.cmake  EthExecutableHelper.cmake  EthPolicy.cmake  EthUtils.cmake  FindPackageHandleStandardArgs.cmake  FindSolidity.cmake  GdtuDependencies.cmake  GdtuOptions.cmake  GdtuUtils.cmake  UseDev.cmake  UseJsoncpp.cmake  UseSolidity.cmake
docs/: common-patterns.rst  conf.py  contracts.rst  contributing.rst  control-structures.rst  frequently-asked-questions.rst  index.rst  installing-solidity.rst  introduction-to-smart-contracts.rst  layout-of-source-files.rst  miscellaneous.rst  security-considerations.rst  solidity-by-example.rst  solidity-in-depth.rst  style-guide.rst  types.rst  units-and-global-variables.rst
libdevcore/: ABI.h  Assertions.h  CMakeLists.txt  Common.h  CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  Exceptions.h  FixedHash.h  SHA3.cpp  SHA3.h  UTF8.cpp  UTF8.h  UndefMacros.h  debugbreak.h  picosha2.h
libevmasm/: Assembly.cpp  Assembly.h  AssemblyItem.cpp  AssemblyItem.h  BlockDeduplicator.cpp  BlockDeduplicator.h  CMakeLists.txt  CommonSubexpressionEliminator.cpp  CommonSubexpressionEliminator.h  ConstantOptimiser.cpp  ConstantOptimiser.h  ControlFlowGraph.cpp  ControlFlowGraph.h  EVMSchedule.h  Exceptions.h  ExpressionClasses.cpp  ExpressionClasses.h  GasMeter.cpp  GasMeter.h  Instruction.cpp  Instruction.h  KnownState.cpp  KnownState.h  LinkerObject.cpp  LinkerObject.h  (+5 more)
(+133 files in other folders)
